# sound-scissors

./: .gitignore  sound-scissors.cabal
src/Sound/: Scissors.hs
