name:                 sound-scissors
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Sound
build-type:           Simple
cabal-version:        >= 1.10

library
  exposed-modules:
    Sound.Scissors
  build-depends:
    base >= 4.7 && < 4.8
    , temporary
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
