name:                 sound-scissors
version:              0.1
synopsis:             Slice up audio files with SoX, functionally and type-safe.
description:

  @sound-scissors@ is a functional, type-safe interface to SoX, the audio Swiss
  Army knife. It provides a simple DSL for building up algebraic expressions
  of audio files, plus an optional layer of type safety using GHC 7.8's type
  naturals to keep track of audio sample rates and channel counts.
  .
  This package requires SoX to be installed;
  @sox@ and @soxi@ must be available on the command line.

author:               Michael Tolly
maintainer:           miketolly@gmail.com
license:              GPL
license-file:         LICENSE
category:             Sound
build-type:           Simple
cabal-version:        >= 1.10
homepage:             https://github.com/mtolly/sound-scissors
bug-reports:          https://github.com/mtolly/sound-scissors/issues

library
  exposed-modules:
    Sound.Scissors
  build-depends:
    base        >= 4.7     && < 4.8
    , temporary >= 1.1     && < 1.3
    , process   >= 1.2.0.0 && < 1.3
    , directory >= 1.0.0.0 && < 1.3
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall

source-repository head
  type:                 git
  location:             https://github.com/mtolly/sound-scissors
